[package]
name = "tmux-expose"
version = "0.5.2"
edition = "2024"
description = "Mission Control-style tmux session switcher with live terminal previews"
license = "MIT"
repository = "https://github.com/cesarferreira/tmux.expose"
homepage = "https://github.com/cesarferreira/tmux.expose"
readme = "README.md"
keywords = ["tmux", "terminal", "tui", "session", "switcher"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28"
